analyzer/tests/snapshots/analysis__case_015_create_contract_from_init.snap
---
source: analyzer/tests/analysis.rs
expression: "build_snapshot(fixture, src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "get_my_num",
                        params: [],
                        return_type: Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    },
                ],
            },
        ),
        "FooFactory": Contract(
            Contract {
                name: "FooFactory",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "get_foo_addr",
                        params: [],
                        return_type: Base(
                            Address,
                        ),
                    },
                ],
            },
        ),
    },
    tuples_used: {},
}

note: 
  ┌─ features/create_contract_from_init.fe:3:16
  │
3 │         return 42
  │                ^^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/create_contract_from_init.fe:3:16
  │
3 │         return 42
  │                ^^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/create_contract_from_init.fe:9:9
  │
9 │         self.foo_addr = address(Foo.create(0))
  │         ^^^^^^^^^^^^^ attributes hash: 10540907752302236140
  │
  = ExpressionAttributes {
        typ: Base(
            Address,
        ),
        location: Storage {
            nonce: Some(
                0,
            ),
        },
        move_location: None,
    }

note: 
  ┌─ features/create_contract_from_init.fe:9:44
  │
9 │         self.foo_addr = address(Foo.create(0))
  │                                            ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/create_contract_from_init.fe:9:44
  │
9 │         self.foo_addr = address(Foo.create(0))
  │                                            ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/create_contract_from_init.fe:9:33
  │
9 │         self.foo_addr = address(Foo.create(0))
  │                                 ^^^^^^^^^^^^^ attributes hash: 8552961459538575979
  │
  = ExpressionAttributes {
        typ: Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "get_my_num",
                        params: [],
                        return_type: Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    },
                ],
            },
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/create_contract_from_init.fe:9:33
  │
9 │         self.foo_addr = address(Foo.create(0))
  │                                 ^^^^^^^^^^^^^ attributes hash: 8552961459538575979
  │
  = ExpressionAttributes {
        typ: Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "get_my_num",
                        params: [],
                        return_type: Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    },
                ],
            },
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/create_contract_from_init.fe:9:25
  │
9 │         self.foo_addr = address(Foo.create(0))
  │                         ^^^^^^^^^^^^^^^^^^^^^^ attributes hash: 513065555763557710
  │
  = ExpressionAttributes {
        typ: Base(
            Address,
        ),
        location: Value,
        move_location: None,
    }

note: 
   ┌─ features/create_contract_from_init.fe:12:16
   │
12 │         return self.foo_addr
   │                ^^^^^^^^^^^^^ attributes hash: 10848859084443309747
   │
   = ExpressionAttributes {
         typ: Base(
             Address,
         ),
         location: Storage {
             nonce: Some(
                 0,
             ),
         },
         move_location: Some(
             Value,
         ),
     }

note: 
   ┌─ features/create_contract_from_init.fe:12:16
   │
12 │         return self.foo_addr
   │                ^^^^^^^^^^^^^ attributes hash: 10848859084443309747
   │
   = ExpressionAttributes {
         typ: Base(
             Address,
         ),
         location: Storage {
             nonce: Some(
                 0,
             ),
         },
         move_location: Some(
             Value,
         ),
     }

note: 
  ┌─ features/create_contract_from_init.fe:2:5
  │  
2 │ ╭     pub def get_my_num() -> u256:
3 │ │         return 42
  │ ╰─────────────────^ attributes hash: 10550548704405770348
  │  
  = FunctionAttributes {
        is_public: true,
        name: "get_my_num",
        params: [],
        return_type: Base(
            Numeric(
                U256,
            ),
        ),
    }

note: 
  ┌─ features/create_contract_from_init.fe:8:5
  │  
8 │ ╭     pub def __init__():
9 │ │         self.foo_addr = address(Foo.create(0))
  │ ╰──────────────────────────────────────────────^ attributes hash: 11571125529778075370
  │  
  = FunctionAttributes {
        is_public: true,
        name: "__init__",
        params: [],
        return_type: Tuple(
            Tuple {
                items: [],
            },
        ),
    }

note: 
   ┌─ features/create_contract_from_init.fe:11:5
   │  
11 │ ╭     pub def get_foo_addr() -> address:
12 │ │         return self.foo_addr
   │ ╰────────────────────────────^ attributes hash: 17930139203183863417
   │  
   = FunctionAttributes {
         is_public: true,
         name: "get_foo_addr",
         params: [],
         return_type: Base(
             Address,
         ),
     }

note: 
  ┌─ features/create_contract_from_init.fe:1:1
  │  
1 │ ╭ contract Foo:
2 │ │     pub def get_my_num() -> u256:
3 │ │         return 42
  │ ╰─────────────────^ attributes hash: 11401818108321754687
  │  
  = ContractAttributes {
        public_functions: [
            FunctionAttributes {
                is_public: true,
                name: "get_my_num",
                params: [],
                return_type: Base(
                    Numeric(
                        U256,
                    ),
                ),
            },
        ],
        init_function: None,
        events: [],
        list_expressions: {},
        string_literals: {},
        structs: [],
        external_contracts: [
            Contract {
                name: "FooFactory",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "get_foo_addr",
                        params: [],
                        return_type: Base(
                            Address,
                        ),
                    },
                ],
            },
        ],
        created_contracts: {},
    }

note: 
   ┌─ features/create_contract_from_init.fe:5:1
   │  
 5 │ ╭ contract FooFactory:
 6 │ │     foo_addr: address
 7 │ │ 
 8 │ │     pub def __init__():
   · │
11 │ │     pub def get_foo_addr() -> address:
12 │ │         return self.foo_addr
   │ ╰────────────────────────────^ attributes hash: 12497859864939413860
   │  
   = ContractAttributes {
         public_functions: [
             FunctionAttributes {
                 is_public: true,
                 name: "get_foo_addr",
                 params: [],
                 return_type: Base(
                     Address,
                 ),
             },
         ],
         init_function: Some(
             FunctionAttributes {
                 is_public: true,
                 name: "__init__",
                 params: [],
                 return_type: Tuple(
                     Tuple {
                         items: [],
                     },
                 ),
             },
         ),
         events: [],
         list_expressions: {},
         string_literals: {},
         structs: [],
         external_contracts: [
             Contract {
                 name: "Foo",
                 functions: [
                     FunctionAttributes {
                         is_public: true,
                         name: "get_my_num",
                         params: [],
                         return_type: Base(
                             Numeric(
                                 U256,
                             ),
                         ),
                     },
                 ],
             },
         ],
         created_contracts: {
             "Foo",
         },
     }

note: 
  ┌─ features/create_contract_from_init.fe:9:25
  │
9 │         self.foo_addr = address(Foo.create(0))
  │                         ^^^^^^^ attributes hash: 6114858510168753394
  │
  = TypeConstructor {
        typ: Base(
            Address,
        ),
    }

note: 
  ┌─ features/create_contract_from_init.fe:9:33
  │
9 │         self.foo_addr = address(Foo.create(0))
  │                                 ^^^^^^^^^^ attributes hash: 4712101790258272829
  │
  = TypeAttribute {
        typ: Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "get_my_num",
                        params: [],
                        return_type: Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    },
                ],
            },
        ),
        func_name: "create",
    }

note: 
  ┌─ features/create_contract_from_init.fe:2:29
  │
2 │     pub def get_my_num() -> u256:
  │                             ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
   ┌─ features/create_contract_from_init.fe:11:31
   │
11 │     pub def get_foo_addr() -> address:
   │                               ^^^^^^^ attributes hash: 574436082528610497
   │
   = Base(
         Address,
     )

note: 
  ┌─ features/create_contract_from_init.fe:6:15
  │
6 │     foo_addr: address
  │               ^^^^^^^ attributes hash: 574436082528610497
  │
  = Base(
        Address,
    )


